Modified route & doc on ProductController.php Modified link to detail on Product.php Added getProductPaginator() on ProductRepository.php to paginate the results
